# autohiring

./: .gitignore  bootstrap.py  pyproject.toml
docs/: usecases.md
src/autohiring/: __init__.py  cli.py
src/autohiring/commands/phone/: __init__.py  command.py
src/autohiring/commands/scraper/: __init__.py  anti_detect.py  command.py  ua_pool.py
src/autohiring/commands/tts/: __init__.py  command.py
src/autohiring/commands/voip/: __init__.py  command.py
tests/integration/: test_cli.py
tests/unit/: test_anti_detect.py  test_phone.py  test_scraper.py
