[project]
name = "autohiring"
version = "0.1.0"
description = "招聘辅助CLI工具"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.21.0",
    "rich>=13.0.0",
    "phonenumbers>=8.13.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "aliyun-python-sdk-core>=2.13.0",
    "aliyun-python-sdk-dyvmsapi>=3.0.0",
    "selenium>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autohiring = "autohiring.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
